# master_msgs

./: CMakeLists.txt  README.md  node_Interface.py  pacakage.xml  package.xml
msg/: OFDM.msg  PID.msg  arm_Orders.msg  batteries.msg  current.msg  geociencia.msg  pots.msg  rpm.msg  sensibility.msg  traction_Orders.msg
srv/: service_enable.srv
