<package format="2">
  <name>master_msgs</name>
  <version>1.0.0</version>
  <description>
  This package provides ROS capability.
  </description>
  <maintainer email="jd.serranom@uniandes.edu.co">Juan David Serrano</maintainer>
  <maintainer email="ma.escalante@uniandes.edu.co">Maria Alejandra Escalante</maintainer>
  <maintainer email="jf.gaviria@uniandes.edu.co">Juan Felipe Gaviria</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <!--<depend>message_generation</depend>-->

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
